Fix unable to scroll in x-direction when content is overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,14 @@
   box-sizing: border-box;
 }
 
+#calendar-container {
+  min-height: 626px;
+}
+
+#events-container {
+  min-height: 454px;
+}
+
 .day-event, .colour-box {
   border-radius: 50%;
   border: 2px solid white;
